martian-derive/tests/ui_martian_filetype/test_invalid_char_extension.rs
use martian_derive::martian_filetype;

martian_filetype! {TxtFile, "t**xt"}

fn main() {}